--- a/manifest.json
+++ b/manifest.json
@@ -3,23 +3,23 @@
   "short_name": "Horn",
   "icons": [{
     "src": "icon/icon-128.png",
-    "size": "128x128",
+    "sizes": "128x128",
     "type": "image/png"
   }, {
     "src": "icon/icon-144.png",
-    "size": "144x144",
+    "sizes": "144x144",
     "type": "image/png"
   }, {
     "src": "icon/icon-152.png",
-    "size": "152x152",
+    "sizes": "152x152",
     "type": "image/png"
   }, {
     "src": "icon/icon-192.png",
-    "size": "192x192",
+    "sizes": "192x192",
     "type": "image/png"
   }, {
     "src": "icon/icon-256.png",
-    "size": "256x256",
+    "sizes": "256x256",
     "type": "image/png"
   }],
   "start_url": "./index.html",
